<?xml version="1.0" encoding="utf-8"?>
<android.widget.RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context="com.example.hdelanietamarin.mindproblem.InitActivity">

    <Button
        android:id="@+id/btn_game1"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_above="@+id/btn_game4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="26dp"
        android:layout_marginStart="26dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/Colores"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btn_game2"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignTop="@+id/btn_game1"
        android:layout_marginLeft="45dp"
        android:layout_marginStart="44dp"
        android:layout_toEndOf="@+id/btn_game1"
        android:layout_toRightOf="@+id/btn_game1"
        android:backgroundTint="@color/colorAccent"
        android:background="@drawable/roundedbutton"
        android:text="@string/numeros"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btn_game3"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/btn_game1"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/btn_game1"
        android:layout_marginBottom="13dp"
        android:backgroundTint="@color/colorAccent"
        android:background="@drawable/roundedbutton"
        android:text="@string/dibuja"
        android:textColor="@android:color/background_light" />

    <Button
        android:id="@+id/btn_game4"
        android:layout_width="140dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/btn_game2"
        android:layout_alignStart="@+id/btn_game2"
        android:layout_alignTop="@+id/btn_game3"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/dibujos"
        android:textColor="@android:color/background_light" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/btn_game1"
        android:layout_alignParentTop="true"
        android:layout_alignStart="@+id/btn_game1"
        android:layout_marginLeft="40dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="10dp"
        app:srcCompat="@drawable/bubble_init" />
</android.widget.RelativeLayout>
